# erase-serde-skip

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: roundtrip.rs
